--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,7 @@ authors = ["John <jlek@findmypast.com>"]
 edition = "2018"
 
 [dependencies]
+chrono = { version = "0.4", features = ["serde"] }
 nom = "5.1.1"
 serde = { version = "1.0.110", features = ["derive"] }
+serde_json = "1.0"
