--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
+clap = "2.33.1"
 nom = "5.1.1"
 serde = { version = "1.0.110", features = ["derive"] }
 serde_json = "1.0"
